--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   url_launcher: ^6.3.0
   share_plus: ^10.1.2
   flutter_screenutil: ^5.9.0
+  clipboard: ^0.1.3
 #  go_router: ^6.0.1
  # desktop_window: ^0.4.0
 #  url_launcher: ^6.1.10
