--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   share_plus: ^10.1.2
   flutter_screenutil: ^5.9.0
   clipboard: ^0.1.3
+  in_app_purchase: ^3.2.1
+  shared_preferences: ^2.2.2
+
+
 #  go_router: ^6.0.1
  # desktop_window: ^0.4.0
 #  url_launcher: ^6.1.10
