--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -16,6 +16,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: 'stable'
+          # REMOVE architecture: ARM64
 
       - name: Install CocoaPods dependencies
         run: |
