--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -13,10 +13,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter-actions/setup-flutter@v2
         with:
-          flutter-version: 'stable'
-          # REMOVE architecture: ARM64
+          flutter-version: '3.19.6'
 
       - name: Install CocoaPods dependencies
         run: |
