--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.16.3'
+          flutter-version: 'latest'
 
       - name: Install envsubst (for placeholder substitution)
         run: |
