--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -1,85 +1,85 @@
 name: Build Flutter iOS IPA
 
 on:
-  workflow_dispatch:  # Manual trigger
   push:
-    branches: [main]  # Auto-trigger on main
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build_ios:
     runs-on: macos-latest
-    timeout-minutes: 30
 
     steps:
-      ### 1. Checkout Code
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      ### 2. Setup Flutter
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.29.3'
-          cache: true
 
-      ### 3. Ensure iOS Folder Exists
-      - name: Verify iOS Project
+      # Key addition to prevent Podfile errors
+      - name: Ensure iOS project is initialized
         run: |
-          if [ ! -d "ios" ]; then
+          if [ ! -f "ios/Podfile" ]; then
             flutter create --platforms ios .
           fi
 
-      ### 4. Install CocoaPods System-Wide
-      - name: Install CocoaPods
-        run: sudo gem install cocoapods
-
-      ### 5. Resolve iOS Dependencies
-      - name: Install Pods
+      - name: Install envsubst (for placeholder substitution)
         run: |
-          cd ios
-          pod repo update  # Ensure latest specs
-          pod install --verbose  # Detailed logging
-          cd ..
+          brew install gettext
+          brew link --force gettext
 
-      ### 6. Keychain Setup
-      - name: Setup Keychain
+      - name: Generate ExportOptions.plist
+        env:
+          EXPORT_METHOD: app-store
+          TEAM_ID: ${{ secrets.TEAM_ID }}
+          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
+          PROVISIONING_PROFILE_NAME: "My MathEnglish App App Store Distribution"
+        run: |
+          envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
+
+      - name: Create temporary keychain
         env:
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
-          KEYCHAIN_PATH="$RUNNER_TEMP/signing.keychain"
+          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
+          security list-keychains -s "$KEYCHAIN_PATH" $(security list-keychains | sed s/\"//g)
 
-      ### 7. Import Certificate
-      - name: Import Certificate
+      - name: Import Apple certificate into keychain
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
-          KEYCHAIN_PATH="$RUNNER_TEMP/signing.keychain"
-          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > cert.p12
-          security import cert.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign
-          security set-key-partition-list -S "apple-tool:,apple:" -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios/certificate.p12
+          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
-      ### 8. Install Provisioning Profile
-      - name: Install Provisioning Profile
+      - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/app.mobileprovision
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
 
-      ### 9. Build IPA
-      - name: Build IPA
+      - name: Install CocoaPods dependencies
         run: |
-          flutter pub get
-          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+          cd ios
+          pod install --repo-update
+          cd ..
 
-      ### 10. Upload Artifact
-      - name: Upload IPA
+      - name: Build IPA
+        run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+
+      - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
-          name: app-ipa
+          name: ios-ipa
           path: build/ios/ipa/*.ipa
