--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           flutter-version: '3.29.3'
 
-      # Key addition to prevent Podfile errors
+      # Ensure iOS project is initialized (creates Podfile if missing)
       - name: Ensure iOS project is initialized
         run: |
           if [ ! -f "ios/Podfile" ]; then
