--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -68,8 +68,9 @@ jobs:
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
           echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios/certificate.p12
-          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign
+          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
 
       - name: Install provisioning profile
         env:
