--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -32,6 +32,7 @@ jobs:
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
+          security list-keychains -s "$KEYCHAIN_PATH"
 
       - name: Install Apple WWDR Intermediate Certificate
         run: |
@@ -39,13 +40,52 @@ jobs:
           curl -o AppleWWDRCAG3.cer https://www.apple.com/certificateauthority/AppleWWDRCAG3.cer
           security import AppleWWDRCAG3.cer -k "$KEYCHAIN_PATH" -A -T /usr/bin/codesign
 
-      - name: Import Apple certificate and provisioning profile
-        uses: apple-actions/import-codesign-certs@v1
-        with:
-          p12-file-base64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-          p12-password: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
-          profiles: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
+      - name: Import Certificate (Manual Method)
+        env:
+          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+          IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
+          
+          # Decode certificate
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
+          
+          # Verify file
+          if [ ! -s "certificate.p12" ]; then
+            echo "Error: Decoded certificate file is empty"
+            exit 1
+          fi
+          
+          # Import with retry logic
+          for i in {1..3}; do
+            if security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security; then
+              echo "Certificate imported successfully"
+              break
+            else
+              echo "Attempt $i failed. Retrying..."
+              sleep 2
+            fi
+          done
+          
+          # Final verification
+          security find-identity -v -p codesigning "$KEYCHAIN_PATH" || exit 1
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+      - name: Install Provisioning Profile (Manual Method)
+        env:
+          IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
+        run: |
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
+          
+          # Verify profile
+          if [ ! -s ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision ]; then
+            echo "Error: Provisioning profile is empty"
+            exit 1
+          fi
+          
+          echo "Provisioning profile installed successfully"
 
       - name: Install CocoaPods dependencies
         run: |
