--- a/.github/workflows/build_ios.yml
+++ b/.github/workflows/build_ios.yml
@@ -32,7 +32,6 @@ jobs:
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
-          security list-keychains -s "$KEYCHAIN_PATH"
 
       - name: Install Apple WWDR Intermediate Certificate
         run: |
@@ -40,52 +39,23 @@ jobs:
           curl -o AppleWWDRCAG3.cer https://www.apple.com/certificateauthority/AppleWWDRCAG3.cer
           security import AppleWWDRCAG3.cer -k "$KEYCHAIN_PATH" -A -T /usr/bin/codesign
 
-      - name: Import Certificate (Manual Method)
+      - name: Import Apple certificate into keychain
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
           IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
-          
-          # Decode certificate
-          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
-          
-          # Verify file
-          if [ ! -s "certificate.p12" ]; then
-            echo "Error: Decoded certificate file is empty"
-            exit 1
-          fi
-          
-          # Import with retry logic
-          for i in {1..3}; do
-            if security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security; then
-              echo "Certificate imported successfully"
-              break
-            else
-              echo "Attempt $i failed. Retrying..."
-              sleep 2
-            fi
-          done
-          
-          # Final verification
-          security find-identity -v -p codesigning "$KEYCHAIN_PATH" || exit 1
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios/certificate.p12
+          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
-      - name: Install Provisioning Profile (Manual Method)
+      - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
-          
-          # Verify profile
-          if [ ! -s ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision ]; then
-            echo "Error: Provisioning profile is empty"
-            exit 1
-          fi
-          
-          echo "Provisioning profile installed successfully"
 
       - name: Install CocoaPods dependencies
         run: |
@@ -94,7 +64,7 @@ jobs:
           cd ..
 
       - name: Build IPA
-        run: flutter build ipa --release
+        run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
 
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
