--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -29,7 +29,7 @@ jobs:
           EXPORT_METHOD: app-store
           TEAM_ID: ${{ secrets.TEAM_ID }}
           APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-          PROVISIONING_PROFILE_NAME: "My MathEnglish App App Store Distribution" # Replace with your actual profile name
+          PROVISIONING_PROFILE_NAME: "My MathEnglish App App Store Distribution"
         run: |
           envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
 
@@ -51,15 +51,23 @@ jobs:
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
-          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios/certificate.p12
+          CERTIFICATE_PATH="$RUNNER_TEMP/certificate.p12"
 
-          # Import certificate with access for codesign
-          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
+          # Decode certificate and verify
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > "$CERTIFICATE_PATH"
+          ls -l "$CERTIFICATE_PATH"  # Debug: Verify file creation
+          file "$CERTIFICATE_PATH"   # Debug: Check file type
+
+          # Attempt import with legacy algorithms
+          security import "$CERTIFICATE_PATH" -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign -f pkcs12
+
+          # Verify import
+          security find-identity -v -p codesigning "$KEYCHAIN_PATH"  # Debug: List identities
 
           # Set key partition list for codesign access
           security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
-          # Unlock keychain again to ensure accessibility
+          # Unlock keychain again
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
 
       - name: Install provisioning profile
@@ -67,7 +75,9 @@ jobs:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
+          PROFILE_PATH=~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > "$PROFILE_PATH"
+          ls -l "$PROFILE_PATH"  # Debug: Verify file creation
 
       - name: Install CocoaPods dependencies
         run: |
@@ -83,4 +93,3 @@ jobs:
         with:
           name: ios-ipa
           path: build/ios/ipa/*.ipa
-          
