--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,96 +1,39 @@
-name: Build Flutter iOS IPA8
-
+name: Flutter iOS Build9
 on:
   push:
-    branches:
-      - main
-  workflow_dispatch:
-
+    branches: [main]
 jobs:
-  build_ios:
+  build:
     runs-on: macos-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
         with:
-          flutter-version: '3.29.3'
-
-      - name: Install envsubst (for placeholder substitution)
-        run: |
-          brew install gettext
-          brew link --force gettext
-
-      - name: Generate ExportOptions.plist
-        env:
-          EXPORT_METHOD: app-store
-          TEAM_ID: ${{ secrets.TEAM_ID }}
-          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-          PROVISIONING_PROFILE_NAME: "My MathEnglish App App Store Distribution" # Replace with your actual profile name
-        run: |
-          envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
-
-      - name: Create temporary keychain
-        env:
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
-          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security default-keychain -s "$KEYCHAIN_PATH"
-          security list-keychains -s "$KEYCHAIN_PATH" $(security list-keychains | sed s/\"//g)
-
-      - name: Import Apple certificate into keychain
-        env:
-          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
-          IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
-          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > ios/certificate.p12
-
-          # Import certificate with access for codesign
-          security import ios/certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
-
-          # Set key partition list for codesign access
-          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
-          # Unlock keychain again to ensure accessibility
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
-      - name: Install provisioning profile
-        env:
-          IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
-        run: |
-          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/profile.mobileprovision
-
-      - name: Get Flutter dependencies
+          java-version: '11'
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.19.x'
+          channel: 'stable'
+      - name: Install dependencies
         run: flutter pub get
-
-      - name: Ensure Podfile exists
+      - name: Decode and import certificate
         run: |
-          cd ios
-          if [ ! -f Podfile ]; then
-            flutter create .
-          fi
-          cd ..
-
-      - name: Install CocoaPods dependencies
+          echo "${{ secrets.IOS_CERTIFICATE_BASE64 }}" | base64 --decode > certificate.p12
+          security create-keychain -p "" build.keychain
+          security import certificate.p12 -k build.keychain -P "${{ secrets.IOS_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
+          security list-keychains -s build.keychain
+          security default-keychain -s build.keychain
+          security unlock-keychain -p "" build.keychain
+          security set-keychain-settings -t 3600 -l build.keychain
+      - name: Decode and install provisioning profile
         run: |
-          cd ios
-          pod install --repo-update
-          cd ..
-
+          echo "${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}" | base64 --decode > profile.mobileprovision
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
       - name: Build IPA
         run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
-
-      - name: Upload IPA artifact
-        uses: actions/upload-artifact@v4
+      - name: Archive IPA
+        uses: actions/upload-artifact@v3
         with:
-          name: ios-ipa
+          name: app-ipa
           path: build/ios/ipa/*.ipa
