--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,39 +1,77 @@
-name: Flutter iOS Build9
+name: Build Flutter iOS IPA10
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  workflow_dispatch:
 jobs:
-  build:
+  build_ios:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
         with:
-          java-version: '11'
-      - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.19.x'
+          flutter-version: '3.19.x' # Use your project’s Flutter version
           channel: 'stable'
-      - name: Install dependencies
-        run: flutter pub get
-      - name: Decode and import certificate
+
+      - name: Install envsubst
         run: |
-          echo "${{ secrets.IOS_CERTIFICATE_BASE64 }}" | base64 --decode > certificate.p12
-          security create-keychain -p "" build.keychain
-          security import certificate.p12 -k build.keychain -P "${{ secrets.IOS_CERTIFICATE_PASSWORD }}" -T /usr/bin/codesign
-          security list-keychains -s build.keychain
-          security default-keychain -s build.keychain
-          security unlock-keychain -p "" build.keychain
-          security set-keychain-settings -t 3600 -l build.keychain
-      - name: Decode and install provisioning profile
+          brew install gettext
+          brew link --force gettext
+
+      - name: Generate ExportOptions.plist
+        env:
+          EXPORT_METHOD: app-store
+          TEAM_ID: AHVM2Z8TDL
+          APP_IDENTIFIER: com.tech4dev.mathJoyPracticeEnglish
+          PROVISIONING_PROFILE_NAME: My_MathEnglish_App_App_Store_Distribution
         run: |
-          echo "${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}" | base64 --decode > profile.mobileprovision
+          envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
+
+      - name: Create temporary keychain
+        env:
+          KEYCHAIN_PASSWORD: tempkeychainpassword # Use a fixed password or add to secrets
+        run: |
+          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
+          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security default-keychain -s "$KEYCHAIN_PATH"
+          security list-keychains -s "$KEYCHAIN_PATH" $(security list-keychains | sed s/\"//g)
+
+      - name: Import Apple certificate into keychain
+        env:
+          IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
+          IOS_CERTIFICATE_BASE64: ${{ secrets.IOS_CERTIFICATE_BASE64 }}
+          KEYCHAIN_PASSWORD: tempkeychainpassword
+        run: |
+          KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
+          echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
+          security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+
+      - name: Install provisioning profile
+        env:
+          IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
+        run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          cp profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/My_MathEnglish_App_App_Store_Distribution.mobileprovision
+
+      - name: Install CocoaPods dependencies
+        run: |
+          cd ios
+          pod install --repo-update
+          cd ..
+
       - name: Build IPA
         run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
-      - name: Archive IPA
-        uses: actions/upload-artifact@v3
+
+      - name: Upload IPA artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: app-ipa
+          name: ios-ipa
           path: build/ios/ipa/*.ipa
