--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.19.x' # Use your project’s Flutter version
+          flutter-version: '3.29.3'
           channel: 'stable'
 
       - name: Install envsubst
