--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA10
+name: Build Flutter iOS IPA11
 on:
   push:
     branches:
@@ -10,18 +10,15 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.29.3'
           channel: 'stable'
-
       - name: Install envsubst
         run: |
           brew install gettext
           brew link --force gettext
-
       - name: Generate ExportOptions.plist
         env:
           EXPORT_METHOD: app-store
@@ -30,18 +27,16 @@ jobs:
           PROVISIONING_PROFILE_NAME: My_MathEnglish_App_App_Store_Distribution
         run: |
           envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
-
       - name: Create temporary keychain
         env:
-          KEYCHAIN_PASSWORD: tempkeychainpassword # Use a fixed password or add to secrets
+          KEYCHAIN_PASSWORD: tempkeychainpassword
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
           security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
-          security list-keychains -s "$KEYCHAIN_PATH" $(security list-keychains | sed s/\"//g)
-
+          security list-keychains -s "$KEYCHAIN_PATH"
       - name: Import Apple certificate into keychain
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
@@ -53,17 +48,15 @@ jobs:
           security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
           security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-
       - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/My_MathEnglish_App_App_Store_Distribution.mobileprovision
-
+          UUID=$(grep UUID -A1 -a My_MathEnglish_App_App_Store_Distribution.mobileprovision | grep -io "[-A-Z0-9]\{36\}")
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
       - name: Build IPA
         run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
-
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
