--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA11
+name: Build Flutter iOS IPA12
 on:
   push:
     branches:
@@ -53,8 +53,9 @@ jobs:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
-          UUID=$(grep UUID -A1 -a My_MathEnglish_App_App_Store_Distribution.mobileprovision | grep -io "[-A-Z0-9]\{36\}")
-          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
+          echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
+          UUID=$(grep UUID -A1 -a profile.mobileprovision | grep -io "[-A-Z0-9]\{36\}")
+          mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
       - name: Build IPA
         run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
       - name: Upload IPA artifact
