--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA12
+name: Build Flutter iOS IPA13
 on:
   push:
     branches:
@@ -27,6 +27,7 @@ jobs:
           PROVISIONING_PROFILE_NAME: My_MathEnglish_App_App_Store_Distribution
         run: |
           envsubst < ios/ExportOptions-Template.plist > ios/ExportOptions.plist
+          cat ios/ExportOptions.plist
       - name: Create temporary keychain
         env:
           KEYCHAIN_PASSWORD: tempkeychainpassword
@@ -36,7 +37,7 @@ jobs:
           security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
-          security list-keychains -s "$KEYCHAIN_PATH"
+          security list-keychains -d user -s "$KEYCHAIN_PATH"
       - name: Import Apple certificate into keychain
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
@@ -45,17 +46,19 @@ jobs:
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
           echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
-          security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign
-          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign || exit 1
+          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH" || exit 1
+          security find-identity -v -p codesigning "$KEYCHAIN_PATH"
       - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
-          UUID=$(grep UUID -A1 -a profile.mobileprovision | grep -io "[-A-Z0-9]\{36\}")
+          UUID=$(grep UUID -A1 -a profile.mobileprovision | grep -io "[-A-Z0-9]\{36\}" || echo "UUID not found")
+          echo "UUID: $UUID"
           mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
+          ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
       - name: Build IPA
         run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
       - name: Upload IPA artifact
