--- a/.github/workflows/build-ios.yml
+++ b/.github/workflows/build-ios.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA13
+name: Build Flutter iOS IPA
 on:
   push:
     branches:
@@ -38,6 +38,7 @@ jobs:
           security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
           security default-keychain -s "$KEYCHAIN_PATH"
           security list-keychains -d user -s "$KEYCHAIN_PATH"
+          security show-keychain-info "$KEYCHAIN_PATH"
       - name: Import Apple certificate into keychain
         env:
           IOS_CERTIFICATE_PASSWORD: ${{ secrets.IOS_CERTIFICATE_PASSWORD }}
@@ -46,21 +47,29 @@ jobs:
         run: |
           KEYCHAIN_PATH="$RUNNER_TEMP/temp.keychain-db"
           echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
+          ls -l certificate.p12
           security import certificate.p12 -k "$KEYCHAIN_PATH" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign || exit 1
           security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH" || exit 1
-          security find-identity -v -p codesigning "$KEYCHAIN_PATH"
+          security find-identity -v -p codesigning "$KEYCHAIN_PATH" || exit 1
       - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
         run: |
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           echo "$IOS_PROVISIONING_PROFILE_BASE64" | base64 --decode > profile.mobileprovision
+          ls -l profile.mobileprovision
           UUID=$(grep UUID -A1 -a profile.mobileprovision | grep -io "[-A-Z0-9]\{36\}" || echo "UUID not found")
           echo "UUID: $UUID"
-          mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
-          ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
+          if [ "$UUID" != "UUID not found" ]; then
+            mv profile.mobileprovision ~/Library/MobileDevice/Provisioning\ Profiles/$UUID.mobileprovision
+            ls -l ~/Library/MobileDevice/Provisioning\ Profiles/
+          else
+            echo "Error: Failed to extract UUID from provisioning profile"
+            exit 1
+          fi
       - name: Build IPA
-        run: flutter build ipa --release --export-options-plist=ios/ExportOptions.plist
+        run: |
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --verbose
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
