--- a/ios/ExportOptions-Template.plist
+++ b/ios/ExportOptions-Template.plist
@@ -2,20 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>method</key>
-  <string>${EXPORT_METHOD}</string>
-  <key>signingStyle</key>
-  <string>manual</string>
-  <key>teamID</key>
-  <string>${TEAM_ID}</string>
-  <key>provisioningProfiles</key>
-  <dict>
-    <key>${APP_IDENTIFIER}</key>
-    <string>${PROVISIONING_PROFILE_NAME}</string>
-  </dict>
-  <key>stripSwiftSymbols</key>
-  <true/>
-  <key>thinning</key>
-  <string><none></string>
+    <key>method</key>
+    <string>${EXPORT_METHOD}</string>
+    <key>teamID</key>
+    <string>${TEAM_ID}</string>
+    <key>provisioningProfiles</key>
+    <dict>
+        <key>${APP_IDENTIFIER}</key>
+        <string>${PROVISIONING_PROFILE_NAME}</string>
+    </dict>
+    <key>signingCertificate</key>
+    <string>Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)</string>
+    <key>signingStyle</key>
+    <string>manual</string>
 </dict>
 </plist>
